--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,5 +6,9 @@
 
   <body>
     <%= yield %>
+    <a href="/songs">View Songs</a></br>
+    <a href="/songs/new">Add New Song</a></br>
+    <a href="/artists">View Artists</a></br>
+    <a href="/genres">View Genres</a>
   </body>
 </html>
